[gd_scene load_steps=9 format=3 uid="uid://bt0gie2shs6f6"]

[ext_resource type="Texture2D" uid="uid://dp3iedfr6pnpi" path="res://assets/gfx/to_be_removed/arena.jpg" id="1_a30xg"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_df48w"]
[ext_resource type="Texture2D" uid="uid://watb5214eb0o" path="res://assets/gfx/to_be_removed/scroll.webp" id="2_mfnh2"]
[ext_resource type="Texture2D" uid="uid://bff4f03xha165" path="res://assets/gfx/to_be_removed/poo.png" id="3_ya72y"]
[ext_resource type="Texture2D" uid="uid://cf836flx1gumi" path="res://assets/gfx/to_be_removed/alien.jpg" id="4_wjgnb"]
[ext_resource type="Texture2D" uid="uid://udacoy2j0eq8" path="res://assets/gfx/to_be_removed/sultan.jpg" id="5_0eyg8"]
[ext_resource type="Texture2D" uid="uid://ds66drv1rdjwn" path="res://assets/gfx/to_be_removed/spear.jpg" id="7_hhwo4"]
[ext_resource type="PackedScene" uid="uid://ynkbs0sacl3o" path="res://scenes/elements/resource.tscn" id="7_k748r"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_df48w")

[node name="background" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="arena" type="Sprite2D" parent="background"]
texture = ExtResource("1_a30xg")

[node name="board" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="resources" type="MarginContainer" parent="board"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 600.0
offset_right = 640.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="scroll" type="Sprite2D" parent="board/resources"]
position = Vector2(0, 100)
texture = ExtResource("2_mfnh2")

[node name="gold" parent="board/resources" instance=ExtResource("7_k748r")]
position = Vector2(-150, 100)

[node name="icon" parent="board/resources/gold" index="2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_ya72y")

[node name="happiness" parent="board/resources" instance=ExtResource("7_k748r")]
position = Vector2(0, 100)

[node name="icon" parent="board/resources/happiness" index="2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_wjgnb")

[node name="boredom" parent="board/resources" instance=ExtResource("7_k748r")]
position = Vector2(150, 100)

[node name="icon" parent="board/resources/boredom" index="2"]
scale = Vector2(0.7, 0.697252)
texture = ExtResource("5_0eyg8")

[node name="trick" type="MarginContainer" parent="board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="kill" type="MarginContainer" parent="board"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 230.0
offset_right = 400.0
offset_bottom = 530.0
grow_vertical = 2

[node name="spear" type="Sprite2D" parent="board/kill"]
position = Vector2(200, 150)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_hhwo4")

[node name="button" type="TextureButton" parent="board/kill"]
layout_mode = 2

[node name="gold" type="MarginContainer" parent="board"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 840.0
offset_top = 230.0
offset_right = 1240.0
offset_bottom = 530.0
grow_horizontal = 0
grow_vertical = 2

[node name="gold" type="Sprite2D" parent="board/gold"]
position = Vector2(200, 150)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_ya72y")

[node name="button" type="TextureButton" parent="board/gold"]
layout_mode = 2

[node name="message" type="MarginContainer" parent="board"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 560.0
offset_right = 920.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 0

[node name="background" type="Sprite2D" parent="board/message"]
position = Vector2(300, 100)
texture = ExtResource("2_mfnh2")

[node name="text" type="Label" parent="board/message"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ale my nie znamy Å¼adnych sztuczek"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="MarginContainer" parent="board"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 100.0

[node name="label" type="Label" parent="board/score"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="end" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="score" type="MarginContainer" parent="end"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="end/score"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "GAME OVER
SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart" type="MarginContainer" parent="end"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="Button" parent="end/restart"]
layout_mode = 2
text = "TRY AGAIN"

[node name="quit" type="MarginContainer" parent="end"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="Button" parent="end/quit"]
layout_mode = 2
text = "QUIT"

[connection signal="mouse_entered" from="board/kill/button" to="." method="_on_kill_mouse_entered"]
[connection signal="mouse_exited" from="board/kill/button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="board/kill/button" to="." method="_on_kill_pressed"]
[connection signal="mouse_entered" from="board/gold/button" to="." method="_on_gold_mouse_entered"]
[connection signal="mouse_exited" from="board/gold/button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="board/gold/button" to="." method="_on_gold_pressed"]
[connection signal="pressed" from="end/restart/restart" to="." method="_try_again_pressed"]
[connection signal="pressed" from="end/quit/quit" to="." method="_quit_game"]

[editable path="board/resources/gold"]
[editable path="board/resources/happiness"]
[editable path="board/resources/boredom"]
